creditas-sf/force-app/main/default/objects/Employee__c/Employee__c.object-meta.xml
<CustomObject>
    <description>Objeto criado para atender a estrutura de employee</description>
    <label>Colaborador</label>
    <nameField>
        <label>Nome do Colaborador</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Colaboradores</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>