creditas-sf/force-app/main/default/objects/Employee__c/fields/AdmissionDate__c.field-meta.xml
<CustomField>
    <fullName>AdmissionDate__c</fullName>
    <description>Data de admissão do funcionário</description>
    <label>Data de admissão</label>
    <type>Date</type>
</CustomField>