creditas-sf/force-app/main/default/objects/Employee__c/fields/Company__c.field-meta.xml
<CustomField>
    <fullName>Company__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Conta pessoa jurídica</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Preencha a conta pessoa jurídica.</errorMessage>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Pessoa Jurídica</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Colaboradores</relationshipLabel>
    <relationshipName>Company</relationshipName>
    <type>Lookup</type>
</CustomField>