creditas-sf/force-app/main/default/objects/Employee__c/fields/ExternalId__c.field-meta.xml
<CustomField>
    <fullName>ExternalId__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>ID de identificação interno do colaborador(a)</description>
    <externalId>true</externalId>
    <label>ID do colaborador</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>