creditas-sf/force-app/main/default/objects/Employee__c/fields/ExternalTenant__c.field-meta.xml
<CustomField>
    <fullName>ExternalTenant__c</fullName>
    <description>Esse campo representa a região da conta (Região de origem do registro - br/mx)</description>
    <label>Tenant</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>creditasmx</fullName>
            </value>
            <value>
                <fullName>creditasbr</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>