creditas-sf/force-app/main/default/objects/Employee__c/fields/ExternalVersion__c.field-meta.xml
<CustomField>
    <fullName>ExternalVersion__c</fullName>
    <description>Versão do Person ID vinculado</description>
    <label>Versão de person</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>