creditas-sf/force-app/main/default/objects/Employee__c/fields/IsExternallySynched__c.field-meta.xml
<CustomField>
    <fullName>IsExternallySynched__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsExternallySynched</label>
    <type>Checkbox</type>
</CustomField>