creditas-sf/force-app/main/default/objects/Employee__c/fields/IsSynchEnabled__c.field-meta.xml
<CustomField>
    <fullName>IsSynchEnabled__c</fullName>
    <label>IsSynchEnabled</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DISABLED</fullName>
            </value>
            <value>
                <fullName>SYNCHING</fullName>
            </value>
            <value>
                <fullName>ENABLED</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>