creditas-sf/force-app/main/default/objects/Employee__c/fields/Margin__c.field-meta.xml
<CustomField>
    <fullName>Margin__c</fullName>
    <description>Valor da margem</description>
    <label>Valor da margem</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>