creditas-sf/force-app/main/default/objects/Employee__c/fields/PersonAccount__c.field-meta.xml
<CustomField>
    <fullName>PersonAccount__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Conta pessoa física</description>
    <label>Conta pessoa física</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Preencha a conta pessoa física.</errorMessage>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Pessoa Física</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Colaboradores</relationshipLabel>
    <relationshipName>PersonAccount</relationshipName>
    <type>Lookup</type>
</CustomField>