creditas-sf/force-app/main/default/objects/Employee__c/fields/Salary__c.field-meta.xml
<CustomField>
    <fullName>Salary__c</fullName>
    <description>Valor do salário</description>
    <label>Valor do salário</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>