creditas-sf/force-app/main/default/objects/Employee__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Situação do vinculo empregatício e de importação</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PENDING</fullName>
            </value>
            <value>
                <fullName>ACTIVE</fullName>
            </value>
            <value>
                <fullName>ON_LEAVE</fullName>
            </value>
            <value>
                <fullName>FIRED</fullName>
            </value>
            <value>
                <fullName>RETIRED</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>