creditas-sf/force-app/main/default/objects/Employee__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Tipo de contrato de trabalho</description>
    <label>Tipo de contrato</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>STANDARD_CONTRACT</fullName>
                <default>true</default>
                <label>STANDARD_CONTRACT</label>
            </value>
            <value>
                <fullName>LEGAL_PERSON</fullName>
            </value>
            <value>
                <fullName>FREELANCER</fullName>
            </value>
            <value>
                <fullName>HOURLY_WAGE</fullName>
            </value>
            <value>
                <fullName>INTERN</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>